test/parse/func/bad-local-binding-no-type.txt
;;; ERROR: 1
(module (func (local $n)))
(;; STDERR ;;;
out/test/parse/func/bad-local-binding-no-type.txt:2:24: error: syntax error, unexpected ), expecting VALUE_TYPE
(module (func (local $n)))
                       ^
;;; STDERR ;;)
